# Pauper

./: .gitignore  README.md  index.html  npm_install.bat  package.json  tsconfig.json
pauper-c++/: .gitignore  CMakeLists.txt  CppProperties.json  bundle.cmd
pauper-c++/buildscripts/: clean.cmd  mingw32-x64-acquire.cmd  mingw32-x64-compile-debug.cmd  mingw32-x64-compile-release.cmd  mingw32-x64-compile.cmd  vs2017-x64-acquire.cmd  vs2017-x64-compile-debug.cmd  vs2017-x64-compile-release.cmd  vs2017-x64-compile.cmd
pauper-c++/ext/: .gitignore  clean.cmd  cross-acquire-concurrentqueue.cmd  mingw32-x64-acquire-box2d.cmd  mingw32-x64-acquire-duktape.cmd  mingw32-x64-acquire-sfml.cmd  mingw32-x64-acquire.cmd  prepare.cmd  vs2017-x64-acquire-box2d.cmd  vs2017-x64-acquire-chakracore.cmd  vs2017-x64-acquire-duktape.cmd  vs2017-x64-acquire-sfml.cmd  vs2017-x64-acquire.cmd
pauper-c++/src/: main.cpp
pauper-c++/src/Concurrent/: TaskQueue.hpp
pauper-c++/src/Javascript/: Box2dExtensions.cpp  Box2dExtensions.hpp  ChakraJavascriptEngine.cpp  ChakraJavascriptEngine.hpp  ChakraTask.hpp  ConsoleExtensions.cpp  ConsoleExtensions.hpp  DukJavascriptEngine.cpp  DukJavascriptEngine.hpp  FileSystemExtensions.cpp  FilesystemExtensions.hpp  JavascriptEngine.hpp  SfmlExtensions.cpp  SfmlExtensions.hpp  TimerExtensions.hpp  TimerExtensionsChakra.cpp  TimerExtensionsDuk.cpp  UtilityExtensions.cpp  UtilityExtensions.hpp  WorkerExtensions.cpp  WorkerExtensions.hpp
pauper-c++/src/Profile/: Profiler.cpp  Profiler.hpp
pauper-c++/src/Sfml/: SfmlAssetStore.cpp  SfmlAssetStore.hpp
pauper-c++/testscripts/: index.tsx  package.json  react.tsx  simple.ts  tsconfig.json  webpack.config.js
pauper-core/: package.json  tslint.json
pauper-core/src/: profiler.ts
pauper-drivers/: package.json
pauper-drivers/src/: create-driver.ts  create-sfml-driver.ts  create-web-driver.ts  driver.ts
pauper-react/: .gitignore  package.json  tsconfig.json
pauper-react/src/: AnimationCycle.spec.ts  AnimationCycle.tsx  FrameRenderer.tsx  FrameRendererHooks.ts  connect.ts  render.spec.tsx  render.ts
pauper-render/: .gitignore  package.json  tsconfig.json
pauper-render/src/: render-frame.model.ts  render-to-canvas.func.spec.ts  render-to-canvas.func.ts  render-to-sfml.func.ts
src/: app-drivers.ts  box2d.d.ts  engine.d.ts  sfml.d.ts
src/assets/: asset-loader.service.ts  asset.model.ts  noop-asset-loader.service.ts  sfml-asset-loader.service.ts  web-asset-loader.service.ts
src/audio/: audio.service.ts  noop-audio.service.ts  sfml-audio.service.ts  web-audio.service.ts
src/ecs/: component-base.type.ts  entities.state.ts  (+9 more)
(+128 files in other folders)
